examples/failing/xhr/logger.js
/home/dvv/node_modules/Socket.IO-node/lib/logger.js